# behavior_analyses

./: .gitignore  .pre-commit-config.yaml  2b Input Driven Observations (GLM-HMM).ipynb  IMPLEMENTATION_SUMMARY.md  README.md  analyze_behavior.py  analyze_chipmunk_behavior.ipynb  chipmunk_analysis_tools.py  chipmunk_behavior.code-workspace  convert_mat_to_h5.py  glmhmm.ipynb  identifying_good_sessions.ipynb  main_analyses.ipynb  openfieldtest.ipynb  psychophysical_kernels.ipynb  pyproject.toml  sess.ipynb  setup_dashboard.sh  testing_PMF.ipynb  tutorial1_psychometric_fit_and_wilson_confidence.ipynb  utils.py
.github/workflows/: ci.yml
TIV/: analysis.py  tmp.py  utils.py
archive/: PMF_fitting.ipynb  get_PMF_parameters.py  old_PMF_plots.ipynb  wait-times-across-days.py  wait-times-and-pmf-fitting.ipynb
behavioral_metrics/: correlations.ipynb  plot_performance_learning.ipynb  session_stats.ipynb
information/: entropy.ipynb
labdata2_testing/: DASHBOARD_README.md  dashboard.py  dashboard_requirements.txt  ingest_subjects.ipynb  labdata2_testing.ipynb  launch_dashboard.py  perf_summaries.py  test_dashboard.py
notebooks/: PMF_fitting.ipynb  tutorial1_psychometric_fit_and_wilson_confidence.ipynb  tutorial3_fit_psychometric_with_statsmodels.ipynb
oft/: oft_MPH.ipynb  openfieldtest.ipynb
performance_plotting/: plot_performance_learning.ipynb
psychometric-curve-plotting/: __init__.py  get_PMF_parameters.py
psychometric_curves/: fit_psychometric.py  plot_psychometric_fits.ipynb  pmf_params.ipynb  utils.py
psychophysical_kernels/: psychophysical_kernels.ipynb
(+5 files in other folders)
