[project]
name = "behavior_analyses"
version = "0.1.0"
description = "behavioral analysis code for my thesis in the Churchland Lab"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.0.0",
    "labdata>=0.0.22",
    "matplotlib>=3.0.0",
    "natsort>=8.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.10.0",
    "seaborn>=0.13.0",
    "chiCa",
    "djchurchland",
]

[tool.uv]
package = false

[tool.uv.sources]
chiCa = { path = "../chiCa" }
djchurchland = { path = "../djchurchland" }

[tool.ruff]
exclude = [
    "*.ipynb",
    "psychometric_curves/fit_psychometric.py",
]
